--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
 <body>
     <header>
         <picture>
-            
+            <img src="./img/explo-1 1.png" alt="logo" />
         </picture>
+        <div>
+            <ul>
+                <li>
+                    <a href="">Login</a>
+                </li>
+                <li>
+                    <a href="">Cadastre-se</a>
+                </li>
+            </ul>
+        </div>
 
     </header>
     <main>
