Arquivos HTML e CSS

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <picture>
             <img src="./img/explo-1 1.png" alt="logo" />
         </picture>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="">Login</a>
@@ -21,11 +21,23 @@
                     <a href="">Cadastre-se</a>
                 </li>
             </ul>
-        </div>
+        </nav>
 
     </header>
     <main>
-
+        <picture>
+            <img src="./Group 1.png" alt="imagem principal"/>
+        </picture>
+        <section class="main">
+            <aside class="card">
+                <h4>Redes de Computadores (20 horas)</h4>
+        </aside>
+        <aside class="card">
+          <h4>JavaScript (40 horas)</h4>
+        </aside>
+        <aside class="card">
+          <h4>HTML5 (40 horas)</h4>
+        </aside>
     </main>
     <footer>
 
