--- a/login.html
+++ b/login.html
@@ -27,13 +27,25 @@
     <main>
         <section class="main">
             <aside class="card">
-                <h4>Cursos gratuitos com certificados</h4>
+                <h4>Faça seu login</h4>
             </aside>
         </section>
-        <picture>
-            <img src="./img/Group 1.png" alt="imagem principal 1"/>
-        </picture>
     </main>
+    <style> 
+        input[type=text] {
+          width: 100%;
+          padding: 12px 20px;
+          margin: 8px 0;
+          box-sizing: border-box;
+        }
+        </style>
+    <form action="/action_page.php">
+        <label for="email">Email:</label><br>
+        <input type="text" id="email" name="email" value="Email"><br>
+        <label for="senha">Senha:</label><br>
+        <input type="text" id="senha" name="Senha" value="Senha"><br>
+        <input type="Entrar" value="Entrar"><br>
+    </form> 
     <footer>
 
     </footer>
